<resources>
    <string name="app_name">Bike Share</string>
    <string name="app_title">Bike Share</string>
    <string name="hint_email">Email</string>
    <string name="hint_id_number">CCCD</string>
    <string name="hint_re_password">Nhập lại mật khẩu</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_phone">Số điện thoại</string>
    <string name="hint_first_name">Tên</string>
    <string name="hint_last_name">Họ và tên đệm</string>
    <string name="hint_gender">Giới tính</string>
    <string name="hint_birthday_year">Năm</string>
    <string name="hint_birthday_month">Tháng</string>
    <string name="hint_birthday_day">Ngày</string>

    <string name="my_location">Vi trí của tôi</string>
    <string name="hint_city">Tỉnh/thành phố</string>
    <string name="hint_district">Quận/huyện</string>
    <string name="hint_ward">Phường/xã</string>
    <string name="hint_active">Mã code active</string>

    <string name="button_login">Đăng nhập</string>
    <string name="button_register">Đăng kí</string>
    <string name="button_active">Active</string>
    <string name="button_logout">Đăng xuất</string>
    <string name="button_rent_car">Thuê xe</string>
    <string name="to_main_bike_share">Trang chủ</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Map</string>
    <string name="menu_contract">Lịch sử các chuyến đi</string>
    <string name="menu_userInfo">Thông tin bản thân</string>

    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>
</resources>
