<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.google.codelabs.mdc.java.shrine.bikeshare.ui.map.MapBikeShareFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_map_bike_share" />

    <fragment
        android:id="@+id/nav_contract"
        android:name="com.google.codelabs.mdc.java.shrine.bikeshare.ui.contract.ContractFragment"
        android:label="@string/menu_contract"
        tools:layout="@layout/fragment_contract" />

    <fragment
        android:id="@+id/nav_userInfo"
        android:name="com.google.codelabs.mdc.java.shrine.bikeshare.ui.UserInfo.UserInfoFragment"
        android:label="@string/menu_userInfo"
        tools:layout="@layout/fragment_user_info" />
</navigation>